--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <body>
    <h1>Un projet d'initiation avec Git</h1>
    <h2>Chaperonnate par OpenClassroom</h2>
+   <h3>VERSION MAJ<h3>
 </body>
 </html>
